unpackaged/main/default/objects/sked_Staff_Meal_Rest_Break_Setting__c/fields/sked_Actual_End__c.field-meta.xml
<CustomField>
    <fullName>sked_Actual_End__c</fullName>
    <label>Actual End</label>
    <type>DateTime</type>
</CustomField>