unpackaged/main/default/objects/sked_Staff_Meal_Rest_Break_Setting__c/fields/sked_Break_Type__c.field-meta.xml
<CustomField>
    <fullName>sked_Break_Type__c</fullName>
    <label>Break Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Meal</fullName>
            </value>
            <value>
                <fullName>Rest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>