unpackaged/main/default/objects/sked_Staff_Meal_Rest_Break_Setting__c/fields/sked_Operation_Record_Staff__c.field-meta.xml
<CustomField>
    <fullName>sked_Operation_Record_Staff__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Operation Record Staff</label>
    <referenceTo>sked_Operation_Record_Staff__c</referenceTo>
    <relationshipLabel>Staff Meal &amp; Rest Break Settings</relationshipLabel>
    <relationshipName>Staff_Meal_Rest_Break_Settings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>